--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <!-- 1) В этом разделе создай 3 дочерних элемента: -->
 
         <!-- a) Заголовок первого уровня со своим ФИО -->
+         <h1>Корнеев Виктор Вадимович</h1>
         <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
+          <p>Я учусь в IT-Инкубаторе, изучаю HTML, CSS и JavaScript. В свободное время люблю посещать спортзал.</p>
         <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
+         <img src="./image/photo_2024-06-15_23-38-41 (1).png" alt="фото" width="200px">
     </section>
 
     <section data-cy="hw1-section-about-pre">
