--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
     <section data-cy="hw1-section-about-pre">
         <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
+         <select>
+            <option>Москва</option>
+            <option selected>Мариуполь</option>
+            <option>Санкт-Петербург</option>
+         </select>
         <div data-cy="hw1-unordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
