--- a/index.html
+++ b/index.html
@@ -36,13 +36,25 @@
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+             <h2>Любимые книги</h2>
             <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+             <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+             </ul>
         </div>
         <div data-cy="hw1-ordered-list-box-pre">
             <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
             <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+             <h2>Любимые страны</h2>
             <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+             <ol>
+                <li>Беларусь</li>
+                <li>Россия</li>
+                <li>Австралия</li>
+             </ol>
         </div>
         <div data-cy="hw1-skills-box-pre">
             <h2>Мои скиллы</h2>
