--- a/index.html
+++ b/index.html
@@ -1,81 +1,100 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It-incubator precourse</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- ЗАДАНИЕ -->
     <!-- Необходимо создать html-элементы там, где это нужно, в соответствии с правилами семантической разметки -->
     <!-- ⚠️ Атрибут data-cy удалять нельзя! Он учавствует в проверке. Если его удалить, тесты не пройдут. -->
 
     <header>
-        <span>IT-INCUBATOR</span>
+      <span>IT-INCUBATOR</span>
     </header>
 
     <section data-cy="hw1-section-main-pre">
-        <!-- 1) В этом разделе создай 3 дочерних элемента: -->
+      <!-- 1) В этом разделе создай 3 дочерних элемента: -->
 
-        <!-- a) Заголовок первого уровня со своим ФИО -->
-         <h1>Корнеев Виктор Вадимович</h1>
-        <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
-          <p>Я учусь в IT-Инкубаторе, изучаю HTML, CSS и JavaScript. В свободное время люблю посещать спортзал.</p>
-        <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
-         <img src="./image/photo_2024-06-15_23-38-41 (1).png" alt="фото" width="200px">
+      <!-- a) Заголовок первого уровня со своим ФИО -->
+      <h1>Корнеев Виктор Вадимович</h1>
+      <!-- b) Несколько строк о себе: где учишься или работаешь, хобби, увлечения. Используй тег для абзаца. Длина строки должна быть больше 50-ти симвов (пробелы и др знаки припинания тоже считаются символом) -->
+      <p>
+        Я учусь в IT-Инкубаторе, изучаю HTML, CSS и JavaScript. В свободное
+        время люблю посещать спортзал.
+      </p>
+      <!-- c) Фото (или любую картинку из интернета). Не забудь добавить описание на случай, если изображение не загрузится -->
+      <img
+        src="./image/photo_2024-06-15_23-38-41 (1).png"
+        alt="фото"
+        width="200px"
+      />
     </section>
 
     <section data-cy="hw1-section-about-pre">
-        <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
-         <select>
-            <option>Москва</option>
-            <option selected>Мариуполь</option>
-            <option>Санкт-Петербург</option>
-         </select>
-        <div data-cy="hw1-unordered-list-box-pre">
-            <!-- 3) В этом разделе создай 2 дочерних элемента: -->
+      <!-- 2) В этом разделе создай выпадающий список с разными городами (не меньше 3-х). Свой город сделай вторым в этом списке. С помощью специального атрибута, сделай так, чтобы твой город всегда был выбранным по умолчанию  -->
+      <select>
+        <option>Москва</option>
+        <option selected>Мариуполь</option>
+        <option>Санкт-Петербург</option>
+      </select>
+      <div data-cy="hw1-unordered-list-box-pre">
+        <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
-            <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
-             <h2>Любимые книги</h2>
-            <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
-             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
-             </ul>
-        </div>
-        <div data-cy="hw1-ordered-list-box-pre">
-            <!-- 3) В этом разделе создай 2 дочерних элемента: -->
+        <!-- a) Заголовок 2-го уровня (любимые книги/фильмы/блюда/страны... и т.п.) -->
+        <h2>Любимые книги</h2>
+        <!-- b) Маркированный список. В списке должно быть не менее 3-х элементов -->
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JS</li>
+        </ul>
+      </div>
+      <div data-cy="hw1-ordered-list-box-pre">
+        <!-- 3) В этом разделе создай 2 дочерних элемента: -->
 
-            <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
-             <h2>Любимые страны</h2>
-            <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
-             <ol>
-                <li>Беларусь</li>
-                <li>Россия</li>
-                <li>Австралия</li>
-             </ol>
-        </div>
-        <div data-cy="hw1-skills-box-pre">
-            <h2>Мои скиллы</h2>
-            <!-- 4) Здесь создай несколько чекбоксов с подписью (не меньше 3-х). 
+        <!-- a) Заголовок 2-го уровня с другим названием (любимые книги/фильмы/блюда/страны... и т.п.) -->
+        <h2>Любимые страны</h2>
+        <!-- b) Нумерованный (упорядоченный) список. В списке должно быть не менее 3-х элементов -->
+        <ol>
+          <li>Беларусь</li>
+          <li>Россия</li>
+          <li>Австралия</li>
+        </ol>
+      </div>
+      <div data-cy="hw1-skills-box-pre">
+        <h2>Мои скиллы</h2>
+        <!-- 4) Здесь создай несколько чекбоксов с подписью (не меньше 3-х). 
                 - В подписи укажи названия любых тем по верстке (все, что знаешь или слышал). 
                 - Каждый чекбокс должен быть связан со своей подписью. Для этого чекбокс должен находиться в элементе для подписи
                 - Отметь "галочкой" (с помощью специального атрибута) темы, которые ты уже знаешь. -->
-        </div>
-        <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
-        <!-- 6) Создай здесь кнопку “Добавить” -->
-        <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
-        
-        <table data-cy="hw-about-table-pre">
-            <!-- 8) В таблице сделай 5 строк и 3 столбца. 
+        <label for="html">
+          <input type="checkbox" name="checkbox" id="html" checked />
+          HTML
+        </label>
+        <label for="css">
+          <input type="checkbox" name="checkbox" id="css" />
+          CSS
+        </label>
+        <label for="js">
+          <input type="checkbox" name="checkbox" id="js" />
+          JS
+        </label>
+      </div>
+      <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
+      <!-- 6) Создай здесь кнопку “Добавить” -->
+      <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
+
+      <table data-cy="hw-about-table-pre">
+        <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать 2 столбца (как должно выглядеть - смотри образец). Таблицу можно заполнять любыми данными -->
-        </table>
+      </table>
     </section>
     <footer data-cy="hw-footer-pre">
-        <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+      <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
     </footer>
-</body>
+  </body>
 </html>
