--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         </label>
       </div>
       <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
+       <input type="text" placeholder="Новый скилл">
       <!-- 6) Создай здесь кнопку “Добавить” -->
       <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
 
