--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
        <input type="text" placeholder="Новый скилл">
       <!-- 6) Создай здесь кнопку “Добавить” -->
+       <button>Добавить</button>
       <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
 
       <table data-cy="hw-about-table-pre">
