--- a/index.html
+++ b/index.html
@@ -83,16 +83,40 @@
         </label>
       </div>
       <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
-       <input type="text" placeholder="Новый скилл">
+      <input type="text" placeholder="Новый скилл" />
       <!-- 6) Создай здесь кнопку “Добавить” -->
-       <button>Добавить</button>
+      <button>Добавить</button>
       <!-- 7) Добавь горизонтальную линию (для этого есть специальный тег) -->
-      <hr>
-      <table data-cy="hw-about-table-pre">
+      <hr />
+      <table data-cy="hw-about-table-pre" border="">
         <!-- 8) В таблице сделай 5 строк и 3 столбца. 
                         - В первой строке ячейки заголовков, в остальных обычные ячейки
                         - Добавь границы для всей таблицы с помощью специального атрибута border="". Он устарел, но работает
                         - В последнем ряду первая ячейка должна занимать 2 столбца (как должно выглядеть - смотри образец). Таблицу можно заполнять любыми данными -->
+        <tr>
+          <th>п/п</th>
+          <th>Наименование</th>
+          <th>Количество</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Монитор</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Клавиатура</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Мышь</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td colspan="2">Итого:</td>
+          <td>4</td>
+        </tr>
       </table>
     </section>
     <footer data-cy="hw-footer-pre">
