--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     </section>
     <footer data-cy="hw-footer-pre">
       <!-- 9) Создай здесь ссылку на наш сайт https://it-incubator.io/ (текст ссылки должен быть it-incubator) -->
+       <a href="https://it-incubator.io/">it-incubator</a>
     </footer>
   </body>
 </html>
